--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,9 @@ section {
     display: flex;
     align-items: center;
     padding: 0 9%;
+    background: url('/img/home.jpg') no-repeat ;
+    background-size: cover;
+    background-position: center;
 }
 
 .home-content {
