--- a/css/style.css
+++ b/css/style.css
@@ -402,10 +402,6 @@ span {
     background: var(--second-bg-color);
 }
 
-.progress h3 {
-    padding: 0.5rem;
-}
-
 .skills .heading {
 
     margin-top: 50px;
@@ -434,18 +430,20 @@ span {
     z-index: 1;
     overflow: hidden;
 }
-.skills-column .skills-content::before{
-content: '';
-position: absolute;
-top: 0;
-left: 0;
-width: 0;
-height: 100%;
-background: var(--bg-color);
-z-index: -1;
-transition: .5s;
+
+.skills-column .skills-content::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: var(--bg-color);
+    z-index: -1;
+    transition: .5s;
 }
-.skills-column .skills-content:hover::before{
+
+.skills-column .skills-content:hover::before {
     width: 100%;
 }
 
@@ -477,29 +475,112 @@ transition: .5s;
     border-radius: .3rem;
     background: var(--main-color);
 }
-.skills-column:nth-child(1) .skills-content .progress:nth-child(1) .bar span{
+
+.skills-column:nth-child(1) .skills-content .progress:nth-child(1) .bar span {
     width: 90%;
 }
-.skills-column:nth-child(1) .skills-content .progress:nth-child(2) .bar span{
+
+.skills-column:nth-child(1) .skills-content .progress:nth-child(2) .bar span {
     width: 90%;
 }
-.skills-column:nth-child(1) .skills-content .progress:nth-child(3) .bar span{
+
+.skills-column:nth-child(1) .skills-content .progress:nth-child(3) .bar span {
     width: 65%;
 }
-.skills-column:nth-child(1) .skills-content .progress:nth-child(4) .bar span{
+
+.skills-column:nth-child(1) .skills-content .progress:nth-child(4) .bar span {
     width: 75%;
 }
 
 
-.skills-column:nth-child(2) .skills-content .progress:nth-child(1) .bar span{
+.skills-column:nth-child(2) .skills-content .progress:nth-child(1) .bar span {
     width: 95%;
 }
-.skills-column:nth-child(2) .skills-content .progress:nth-child(2) .bar span{
+
+.skills-column:nth-child(2) .skills-content .progress:nth-child(2) .bar span {
     width: 65%;
 }
-.skills-column:nth-child(2) .skills-content .progress:nth-child(3) .bar span{
+
+.skills-column:nth-child(2) .skills-content .progress:nth-child(3) .bar span {
     width: 85%;
 }
-.skills-column:nth-child(2) .skills-content .progress:nth-child(4) .bar span{
+
+.skills-column:nth-child(2) .skills-content .progress:nth-child(4) .bar span {
     width: 60%;
+}
+
+/* contact  */
+
+.contact {
+    min-height: auto;
+    padding-bottom: 7rem;
+}
+
+.contact form {
+    max-width: 70rem;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.contact form .input-box {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.contact form .input-box .input-field {
+    position: relative;
+    width: 49%;
+    margin: .8rem 0;
+}
+
+.contact form .input-box .input-field input,
+.contact form .textarea-field textarea {
+    width: 100%;
+    height: 100%;
+    padding: 1.5rem;
+    font-size: 1.6rem;
+    color: var(--text-color);
+    background: transparent;
+    border-radius: .6rem;
+    border: .2rem solid var(--main-color);
+}
+
+.contact form .input-box .input-field input::placeholder,
+.contact form .textarea-field textarea::placeholder {
+    color: var(--text-color);
+}
+
+.contact form .focus {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: var(--second-bg-color);
+    border-radius: .6rem;
+    z-index: -1;
+    transition: .5s;
+}
+
+.contact form .input-box .input-field input:focus~.focus,
+.contact form .input-box .input-field input:valid~.focus,
+.contact form .textarea-field textarea:focus~.focus,
+.contact form .textarea-field textarea:valid~.focus {
+    width: 100%;
+}
+
+.contact form .textarea-field {
+    position: relative;
+    margin: .8rem 0 2.7rem;
+    display: flex;
+}
+
+.contact form .textarea-field textarea {
+    resize: none;
+}
+
+.contact form .btn-box.btns .btn {
+    cursor: pointer;
 }
