--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-@import url('https://googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+
 
 * {
     margin: 0;
@@ -8,7 +9,7 @@
     border: none;
     outline: none;
     scroll-behavior: smooth;
-    font-family: 'Poppins' sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 /* iç içe geçmiş öğelerin içeriğini düzenlemek için kullanılır.  */
@@ -21,7 +22,7 @@
 
 html {
     font-size: 62.5%;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 body {
@@ -41,6 +42,11 @@ body {
     justify-content: space-between;
     align-items: center;
     z-index: 100;
+    transition: .3s;
+}
+
+.header.sticky {
+    background: var(--bg-color);
 }
 
 .logo {
@@ -89,10 +95,12 @@ section {
 }
 
 .home-content h2 {
-    font-size: 4.3rem;
+    font-size: 5rem;
     line-height: 1.3;
+    white-space: nowrap;
 }
-.home-content h2 span{
+
+.home-content h2 span {
     color: var(--text-color);
 }
 
@@ -316,9 +324,6 @@ span {
     background: var(--second-bg-color);
 }
 
-.education .heading {
-    font-size: 100px;
-}
 
 .education .education-row {
     display: flex;
@@ -400,8 +405,8 @@ span {
 }
 
 .skills {
-    min-height: auto;
-    padding-bottom: 7rem;
+    /* min-height: auto; */
+    /* padding-bottom: 7rem; */
     background: var(--second-bg-color);
 }
 
@@ -515,8 +520,8 @@ span {
 /* contact  */
 
 .contact {
-    min-height: auto;
-    padding-bottom: 7rem;
+    /* min-height: auto;
+    padding-bottom: 7rem; */
 }
 
 .contact form {
@@ -638,4 +643,49 @@ span {
 
 .footer-iconTop a:hover i {
     color: var(--main-color);
+}
+
+/* BREAKFOINTS  */
+@media (max-width: 1200px) {
+    html {
+        font-size: 55%;
+    }
+
+    section {
+        padding: 10rem 4% 2rem;
+    }
+
+    .home {
+        padding: 0 4%;
+    }
+
+    .footer {
+        padding: 2rem 4%;
+    }
+}
+
+@media (max-width: 768px) {
+    .header {
+        background: var(--bg-color);
+    }
+
+    #menu-icon {
+        display: block;
+    }
+
+    .navbar {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        padding: 1rem 4%;
+        background: var(--bg-color);
+        box-shadow: 0 .5rem 1rem black;
+    }
+
+    .navbar a {
+        display: block;
+        font-size: 2rem;
+        margin: 3rem 0;
+    }
 }
