--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ section {
     background-image: linear-gradient(var(--main-color), var(--main-color));
     background-repeat: no-repeat;
     -webkit-background-clip: text;
-    background-position: 0 0;
+    background-position: -33rem 0;
     animation: homeBgText 6s linear infinite;
     animation-delay: 2s;
 }
@@ -132,6 +132,8 @@ section {
     height: 100%;
     border-right: 2px solid var(--main-color);
     z-index: -1;
+    animation: homeCursorText 6s linear infinite;
+    animation-delay: 2s;
 }
 
 
@@ -589,9 +591,9 @@ span {
     border-radius: .6rem;
     z-index: -1;
     transition: .5s;
-}addeEDIT HAS BEEN MADE
+}
 
-.contact form .input-box .input-field input:focus~.focus,
+addeEDIT HAS BEEN MADE .contact form .input-box .input-field input:focus~.focus,
 .contact form .input-box .input-field input:valid~.focus,
 .contact form .textarea-field textarea:focus~.focus,
 .contact form .textarea-field textarea:valid~.focus {
@@ -811,4 +813,36 @@ span {
 }
 
 /* KEYFRAMES ANIMATION  */
+@keyframes homeBgText {
 
+    0%,
+    10%,
+    100% {
+        background-position: -33rem 0;
+    }
+
+    65%,
+    85% {
+        background-position: 0 0;
+    }
+}
+
+@keyframes homeCursorText {
+
+    0%,
+    10%,
+    100% {
+        width: 0;
+    }
+
+    65%,
+    78%,
+    85% {
+        width: 100%;
+        opacity: 1;
+    }
+    75%,
+    81% {
+        opacity: 0;
+    }
+}
