--- a/css/style.css
+++ b/css/style.css
@@ -50,9 +50,14 @@ body {
 }
 
 .logo {
+    position: relative;
     font-size: 2.5rem;
     color: var(--text-color);
     font-weight: 600;
+}
+
+.navbar {
+    position: relative;
 }
 
 .navbar a {
@@ -69,6 +74,7 @@ body {
 }
 
 #menu-icon {
+    position: relative;
     font-size: 3.6rem;
     color: var(--text-color);
     cursor: pointer;
@@ -96,9 +102,11 @@ section {
 }
 
 .home-content h2 {
+    position: relative;
+    display: inline-block;
     font-size: 5rem;
+    font-weight: 700;
     line-height: 1.3;
-    white-space: nowrap;
 }
 
 .home-content h2 span {
@@ -119,9 +127,13 @@ section {
     background-repeat: no-repeat;
     -webkit-background-clip: text;
     background-position: -33rem 0;
+}
+
+.home.show-animate .home-content .text-animate h3 {
     animation: homeBgText 6s linear infinite;
     animation-delay: 2s;
 }
+
 
 .home-content .text-animate h3::before {
     content: '';
@@ -131,13 +143,15 @@ section {
     width: 0;
     height: 100%;
     border-right: 2px solid var(--main-color);
-    z-index: -1;
+}
+
+.home.show-animate .home-content .text-animate h3::before {
     animation: homeCursorText 6s linear infinite;
     animation-delay: 2s;
 }
 
-
 .home-content p {
+    position: relative;
     font-size: 1.6rem;
     margin: 2rem 0 4rem;
 }
@@ -274,6 +288,7 @@ section {
 }
 
 .heading {
+    position: relative;
     font-size: 5rem;
     margin-bottom: 3rem;
     text-align: center;
@@ -311,6 +326,7 @@ span {
     border-bottom: .2rem solid var(--second-bg-color);
     border-left: .2rem solid var(--main-color);
     border-right: .2rem solid var(--main-color);
+    animation: aboutSpinner 8s linear infinite;
 }
 
 .about-content {
@@ -318,10 +334,13 @@ span {
 }
 
 .about-content h3 {
+    position: relative;
+    display: inline-block;
     font-size: 2.6rem;
 }
 
 .about-content p {
+    position: relative;
     font-size: 1.6rem;
     margin: 2rem 0 3rem;
 }
@@ -357,11 +376,14 @@ span {
 }
 
 .education-column .title {
+    position: relative;
+    display: inline-block;
     font-size: 2.5rem;
     margin: 0 0 1.5rem 2rem;
 }
 
 .education-column .education-box {
+    position: relative;
     border-left: .2rem solid var(--main-color);
 }
 
@@ -431,6 +453,12 @@ span {
     background: var(--second-bg-color);
 }
 
+.skills h2 {
+    display: inline-block;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
 .skills .heading {
 
     margin-top: 50px;
@@ -447,8 +475,14 @@ span {
 }
 
 .skills-column .title {
+    position: relative;
+    display: inline-block;
     font-size: 2.5rem;
     margin: 0 0 1.5rem;
+}
+
+.skills-column .skills-box {
+    position: relative;
 }
 
 .skills-column .skills-content {
@@ -545,6 +579,12 @@ span {
     padding-bottom: 7rem; */
 }
 
+.contact h2 {
+    display: inline-block;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
 .contact form {
     max-width: 70rem;
     margin: 0 auto;
@@ -623,6 +663,11 @@ addeEDIT HAS BEEN MADE .contact form .input-box .input-field input:focus~.focus,
     background: var(--second-bg-color);
 }
 
+.footer-text,
+.footer-iconTop {
+    position: relative;
+}
+
 .footer-text p {
     font-size: 1.6rem;
 }
@@ -666,22 +711,79 @@ addeEDIT HAS BEEN MADE .contact form .input-box .input-field input:focus~.focus,
     color: var(--main-color);
 }
 
+/* ANIMATION RELOAD AND SCROLL  */
+.animate {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--bg-color);
+    z-index: 98;
+}
+
+.animate.home-img {
+    width: 50%;
+}
+
+.logo .animate,
+.navbar .animate,
+#menu-icon .animate,
+.home.show-animate .animate {
+    animation: showRight 1s ease forwards;
+    animation-delay: calc(.3s * var(--i));
+}
+
+.animate.scroll {
+    transition: 1s ease;
+    transition-delay: calc(.3s / var(--i));
+    animation: none;
+}
+
+section:nth-child(add) .animate.scroll,
+.footer .animate.scroll {
+    background: var(--second-bg-color);
+}
+
+.education .education-box .animate.scroll {
+    width: 105%;
+}
+
+.about.show-animate .animate.scroll,
+.education.show-animate .animate.scroll,
+.skills.show-animate .animate.scroll,
+.contact.show-animate .animate.scroll,
+.footer.show-animate .animate.scroll {
+    transition-delay: calc(.3s * var(--i));
+    width: 0;
+}
+
 /* BREAKFOINTS  */
 @media (max-width: 1200px) {
     html {
         font-size: 55%;
     }
+}
+@media (max-width: 991px) {
+.header {
+    padding: 2rem 4%;
+}
+ section {
+    padding: 10rem 4% 2rem;
+}
 
-    section {
-        padding: 10rem 4% 2rem;
-    }
+.home {
+    padding: 0 4%;
+}
 
-    .home {
-        padding: 0 4%;
-    }
+.footer {
+    padding: 2rem 4%;
+}
+}
 
-    .footer {
-        padding: 2rem 4%;
+@media (max-width:850px) {
+    .animate.home-img {
+        width: 55%;
     }
 }
 
@@ -841,8 +943,21 @@ addeEDIT HAS BEEN MADE .contact form .input-box .input-field input:focus~.focus,
         width: 100%;
         opacity: 1;
     }
+
     75%,
     81% {
         opacity: 0;
+    }
+}
+
+@keyframes aboutSpinner {
+    100% {
+        transform: translate(-50%, -50%) rotate(360deg);
+    }
+}
+
+@keyframes showRight {
+    100% {
+        width: 0;
     }
 }
